Update subtitles UI logic to only allow one PGS subtitle at a time when the MP4 container is used.
--HG--
branch : beta

--- a/VidCoder/View/EncodingWindow.xaml
+++ b/VidCoder/View/EncodingWindow.xaml
@@ -102,6 +102,7 @@
 				Content="{x:Static res:EncodingRes.ContainerLabel}" />
 			<ComboBox 
 				Height="23" HorizontalAlignment="Left" VerticalAlignment="Center" Width="58"
+				VerticalContentAlignment="Center"
 				ItemsSource="{Binding OutputFormatChoices}"
 				SelectedValue="{Binding OutputFormat}"
 				SelectedValuePath="Value"
