--- a/VidCoder/View/LogWindow.xaml
+++ b/VidCoder/View/LogWindow.xaml
@@ -1,12 +1,14 @@
-﻿<Window x:Class="VidCoder.View.LogWindow"
-		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:prop="clr-namespace:VidCoder.Properties"
-		xmlns:res="clr-namespace:VidCoder.LocalResources" 
-		Title="{x:Static res:LogRes.LogWindowTitle}" Height="393" Width="459"
-		Style="{StaticResource NormalWindow}"
-		WindowStyle="ToolWindow" ShowInTaskbar="False" Closing="Window_Closing"
-		MinWidth="220" MinHeight="95">
+﻿<Window
+	x:Class="VidCoder.View.LogWindow"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:prop="clr-namespace:VidCoder.Properties"
+	xmlns:res="clr-namespace:VidCoder.LocalResources" 
+	Title="{x:Static res:LogRes.LogWindowTitle}" Height="393" Width="459"
+	Style="{StaticResource NormalWindow}"
+	WindowStyle="ToolWindow" ShowInTaskbar="False" Closing="Window_Closing"
+	MinWidth="220" MinHeight="95"
+	TextOptions.TextFormattingMode="Display">
 	<Window.InputBindings>
 		<KeyBinding Key="N" Modifiers="Control" Command="{Binding WindowManagerVM.OpenEncodingWindowCommand}" />
 		<KeyBinding Key="P" Modifiers="Control" Command="{Binding WindowManagerVM.OpenPreviewWindowCommand}" />
