--- a/VidCoder/View/QueueColumnsDialog.xaml
+++ b/VidCoder/View/QueueColumnsDialog.xaml
@@ -6,7 +6,8 @@
 	xmlns:prop="clr-namespace:VidCoder.Properties"
 	xmlns:res="clr-namespace:VidCoder.LocalResources" 
 	Title="{x:Static res:MiscRes.QueueColumnsDialogTitle}" Height="411" Width="436"
-	Style="{StaticResource NormalWindow}" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" ShowInTaskbar="False">
+	Style="{StaticResource NormalWindow}" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" ShowInTaskbar="False"
+	TextOptions.TextFormattingMode="Display">
 	<Window.Resources>
 		<DataTemplate x:Key="ColumnDragTemplate">
 			<TextBlock Text="{Binding Title}" />
