--- a/VidCoder/View/ScanMultipleDialog.xaml
+++ b/VidCoder/View/ScanMultipleDialog.xaml
@@ -1,7 +1,9 @@
-﻿<Window x:Class="VidCoder.View.ScanMultipleDialog"
-		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:LocalResources="clr-namespace:VidCoder.LocalResources"
-		Title="{x:Static LocalResources:MiscRes.ScanMultipleWindowTitle}" Height="90" Width="426" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" ShowInTaskbar="False" Closing="Window_Closing">
+﻿<Window
+	x:Class="VidCoder.View.ScanMultipleDialog"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:LocalResources="clr-namespace:VidCoder.LocalResources"
+	Title="{x:Static LocalResources:MiscRes.ScanMultipleWindowTitle}" Height="90" Width="426" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" ShowInTaskbar="False" Closing="Window_Closing"
+	TextOptions.TextFormattingMode="Display">
 	<Grid>
 		<ProgressBar
 			Height="23" Margin="12,12,12,0" Name="progressBar1" VerticalAlignment="Top"
