--- a/VidCoder/View/UpdateSuccess.xaml
+++ b/VidCoder/View/UpdateSuccess.xaml
@@ -4,9 +4,10 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:prop="clr-namespace:VidCoder.Properties"
 	xmlns:res="clr-namespace:VidCoder.LocalResources"
-	Title="{x:Static res:MiscRes.UpdateSuccessDialogTitle}" Height="119" Width="290" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+	Title="{x:Static res:MiscRes.UpdateSuccessDialogTitle}" Height="119" Width="290" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
+	TextOptions.TextFormattingMode="Display">
 	<Grid>
-		<TextBlock Text="{x:Static res:MiscRes.UpdateSuccessDialogMessage}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="19,12,0,0" />
+		<TextBlock Text="{x:Static res:MiscRes.UpdateSuccessDialogMessage}" VerticalAlignment="Top" Margin="19,12,12,0" TextWrapping="Wrap" />
 		<Button
 			Content="{x:Static prop:Resources.Ok}" Height="23" HorizontalAlignment="Right" Margin="0,0,12,12" VerticalAlignment="Bottom" Width="75" IsDefault="True" Click="button1_Click" />
 	</Grid>
